better code organisation

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <script src="utils.js"></script>
     <script src="ui.js"></script>
     <script src="snake.js"></script>
+    <script src="bg.js"></script>
+    <script src="wall.js"></script>
+    <script src="orb.js"></script>
     <script src="game.js"></script>
 </body>
 
