--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 <body>
     <canvas id="game"></canvas>
 
+    
+    <div id="buttons">
+        <span id="world-sizes">
+            <button>Tiny</button><button class="active">Normal</button><button>Huge</button>
+        </span>
+        <button id="enter-key">Play</button>
+    </div>
+
     <script src="config.js"></script>
     <script src="utils.js"></script>
     <script src="ui.js"></script>
